apps/prometheus/default-prometheus/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prometheus
  namespace: default
spec:
  ports:
  - name: web
    port: 9090
    protocol: TCP
    targetPort: web
  selector:
    prometheus: default-prometheus
    app.kubernetes.io/instance: default-prometheus
